# mood-2-mix

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml  tests.yml
gpt/: mood_analyzer.py
music_providers/: __init__.py  base.py  spotify.py  ytmusic.py
routers/: mood.py  playlist.py  recommend.py  spotify.py
schemas/: enums.py  schemas.py
tests/: test_mood_endpoints.py  test_recommend_endpoints.py  test_spotify_endpoints.py
utils/: contains_banned_word.py  get_spotify_token_from_header.py  spotify_list_ids.py
